# decibel-bot

./: .env.example  .gitignore  CLAUDE.md  go.mod  go.sum
.github/workflows/: market-maker-go.yml  release.yml
cmd/decibel-bot/: main.go
cmd/market-info/: main.go
internal/decibel/: aptos_client.go  ws_client.go
internal/engine/: eventbus.go  eventbus_test.go  order_manager.go  order_manager_test.go  position_manager.go  position_manager_test.go  risk_guard.go  scheduler.go  tx_tracker.go
internal/models/: events.go
internal/pkg/retry/: retry_test.go
internal/strategy/: barriers.go  barriers_test.go  decibel_mm.go  proposal.go
market-maker/: 做市参数调优指南.md
market-maker/go/: .env.example  .gitignore  AGENTS.md  CONFIG_GUIDE.md  Makefile  README.md  USAGE.md  decibel-mm-bot.yaml  go.mod  go.sum  main.go  untitled-plan-manualDryRun.prompt.md
market-maker/go/api/: client.go  client_bulk_orders_test.go  client_markets_cache_test.go  json_types_test.go
market-maker/go/aptos/: address.go  address_test.go  client.go  order_events.go  order_events_test.go  txresult_test.go
market-maker/go/bot/: bot.go
market-maker/go/botstate/: state.go
market-maker/go/config/: bool_cli_args_test.go  config.go  file.go  init_yaml.go  init_yaml_test.go  load.go  load_test.go
market-maker/go/configs/: config.yaml
market-maker/go/exchange/: exchange.go  types.go
market-maker/rust/: .env.example  Cargo.toml  README.md
market-maker/rust/src/: api.rs  aptos.rs  bot.rs  config.rs  main.rs  pricing.rs
tests/integration/: README.md  decibel_test.go  helper_test.go
(+69 files in other folders)
