[package]
name = "decibel-mm-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "decibel-mm"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
clap        = { version = "4",    features = ["derive", "env"] }
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha3        = "0.10"
ed25519-dalek = "2"
hex         = "0.4"
futures     = "0.3"
dotenvy     = "0.15"

[dev-dependencies]
approx = "0.5"
